# poly_arb_cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  cli_architecture.md  poly套利工具开发.md  requirements_architecture.md
poly_arb_cli/: __init__.py  cli.py  config.py  storage.py  types.py
poly_arb_cli/cli/: __init__.py  account.py  arb.py  common.py  indexing.py  markets.py  tags.py  tail.py  trades.py  tui_agent.py
poly_arb_cli/clients/: __init__.py  opinion.py  perp.py  polymarket.py
poly_arb_cli/connectors/: __init__.py  news.py  polymarket_ws.py  search.py  vector.py
poly_arb_cli/llm/: __init__.py  agent.py  agentic_rag_graph.py  tools.py  vectorstore.py
poly_arb_cli/services/: __init__.py  barrier_pricing.py  hedge_scanner.py  matcher.py  pricing.py  rebalance_monitor.py  scanner.py  tail_scanner.py  trader.py
poly_arb_cli/ui/: __init__.py  dashboard.py
tests/: test_barrier_pricing.py  test_rebalance_monitor.py  test_tail_scanner.py
