[tool.poetry]
name = "poly-arb-cli"
version = "0.1.0"
description = "Polymarket-Opinion arbitrage CLI scaffold with Typer and Rich"
authors = ["Poly Arb <dev@example.com>"]
readme = "README.md"
packages = [{ include = "poly_arb_cli" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = { version = "^0.12.3", extras = ["all"] }
rich = "^13.7.1"
textual = "^0.72.0"
httpx = "^0.27.0"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
opinion-clob-sdk = "0.4.3"
python-dotenv = "^1.0.1"
# Latest Polymarket CLOB client from official repo; adjust revision as needed.
py-clob-client = { git = "https://github.com/Polymarket/py-clob-client.git", rev = "main" }
ccxt = "^4.4.0"
langchain = ">=1.1.0,<1.2"
langchain-openai = ">=1.1.0,<1.2"
langchain-core = ">=1.1.0,<1.2"
langchain-community = ">=0.2.0"
langchain-text-splitters = ">=0.2.0"
chromadb = "^0.5.3"
websockets = "^13.0"
langgraph = ">=1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"
mypy = "^1.9.0"

[tool.poetry.scripts]
poly-arb = "poly_arb_cli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
